log/build_2022-09-02_16-37-41/mavlink_driver/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/root/mavlink_driver/install/mavlink_driver/lib/python3.10/site-packages/mavlink_driver/all_vehicle_types.py", line 33
    minimal_client.info(minimal_client.future))
                                              ^
SyntaxError: unmatched ')'

